# actor-zeta

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GENERATOR_GUIDE.md  PROMISE_FUTURE_GUIDE.md  README.md  conanfile.txt
.github/workflows/: debug_gcc_args.yaml  macos.yml  sanitizers.yml  ubuntu_clang.yaml  ubuntu_gcc.yaml
benchmark/: CMakeLists.txt
benchmark/actors/: CMakeLists.txt
benchmark/actors/coroutine/: CMakeLists.txt  define_actor.hpp  define_supervisor.hpp  fixtures.hpp  main.cpp
benchmark/actors/multithreaded/: CMakeLists.txt  define_actor.hpp  define_supervisor.hpp  fixtures.hpp
benchmark/actors/scheduled/: CMakeLists.txt  new_benchmark.cpp
benchmark/actors/singlethreaded/: CMakeLists.txt  define_actor.hpp  define_supervisor.hpp  fixtures.hpp  main.cpp
benchmark/coroutine_allocation/: CMakeLists.txt  main.cpp
benchmark/dispatch_overhead/: CMakeLists.txt  main.cpp
benchmark/message/: CMakeLists.txt  body_rtt.cpp  fixtures.hpp  message.cpp
docs/: GCC_COROUTINE_OPERATOR_NEW_BUG.md
examples/: CMakeLists.txt
examples/asio/: CMakeLists.txt  asio_no_exceptions.hpp  main.cpp
examples/balancer/: main.cpp
examples/broadcast/: main.cpp
examples/coroutine/: CMakeLists.txt  mixed_example.cpp
examples/dataflow/: main.cpp
examples/delegation/: CMakeLists.txt  main.cpp
examples/generator/: CMakeLists.txt  main.cpp
examples/supervisor/: CMakeLists.txt  main.cpp
header/: actor-zeta.hpp
header/actor-zeta/: actor.hpp  config.hpp  core.hpp  dispatch.hpp  future.hpp  mailbox.hpp  make_message.hpp  scheduler.hpp  send.hpp  spawn.hpp  src.hpp
header/actor-zeta/actor/: actor_mixin.hpp  address.hpp  basic_actor.hpp  cooperative_actor.hpp  dispatch.hpp  dispatch_traits.hpp  forwards.hpp  implements.hpp
header/actor-zeta/base/: actor_abstract.hpp  actor_mixin.hpp  address.hpp  behavior.hpp  cooperative_actor.hpp  dispatch_traits.hpp  forwards.hpp  handler.hpp
header/actor-zeta/base/detail/: cooperative_actor_classic.hpp  traits_actor.hpp
header/actor-zeta/detail/: behavior_t.hpp  callable_trait.hpp  coro_frame_header.hpp  coroutine.hpp  coroutine_traits.hpp  forwards.hpp  future.hpp  future_awaiters.hpp  future_state.hpp  generator.hpp  ignore_unused.hpp  intrusive_ptr.hpp  launch_thread.hpp  memory.hpp  memory_resource.hpp  monostate.hpp  promise_concepts.hpp  ref_counted.hpp  result_storage.hpp  rtt.hpp  run_loop.hpp  shared_state.hpp  slot_refcount.hpp  state_flags.hpp  type_list.hpp  type_traits.hpp  unique_function.hpp
header/actor-zeta/detail/queue/: enqueue_result.hpp  forward_iterator.hpp  lifo_inbox.hpp  linked_list.hpp  singly_linked.hpp
header/actor-zeta/impl/: handler.ipp  make_message.ipp  send.ipp
header/actor-zeta/impl/actor/: actor_abstract.ipp  address.ipp  behavior.ipp
header/actor-zeta/impl/detail/: future_state.ipp  launch_thread.ipp
header/actor-zeta/impl/detail/pmr/: memory_resource.ipp
header/actor-zeta/impl/mailbox/: default_mailbox.ipp  message.ipp
header/actor-zeta/impl/scheduler/: resumable.ipp  scheduler_abstract.ipp  sharing_scheduler.ipp
header/actor-zeta/impl/scheduler/policy/: unprofiled.ipp  work_sharing.ipp
header/actor-zeta/mailbox/: default_mailbox.hpp  forwards.hpp  id.hpp  mailbox.hpp  make_message.hpp  message.hpp  message_result.hpp  priority.hpp
header/actor-zeta/scheduler/: forwards.hpp  job_ptr.hpp  resumable.hpp  scheduler.hpp  scheduler_abstract.hpp  sharing_scheduler.hpp  worker.hpp
header/actor-zeta/scheduler/policy/: unprofiled.hpp  work_sharing.hpp
test/: CMakeLists.txt
test/actor-id/: CMakeLists.txt  main.cpp
test/behavior/: CMakeLists.txt  main.cpp
test/bool-prohibited/: CMakeLists.txt  main.cpp
test/continuation/: CMakeLists.txt  test_propagation.cpp
test/coroutine-allocation/: CMakeLists.txt  main.cpp
test/coroutine-threading/: CMakeLists.txt  main.cpp  simple_test.cpp
test/coroutines/: CMakeLists.txt  main.cpp
test/crtp-enqueue/: CMakeLists.txt  main.cpp
test/custom-promise/: CMakeLists.txt  main.cpp
test/dispatch-traits/: CMakeLists.txt  main.cpp
test/dispatcher-pattern/: CMakeLists.txt  client.hpp  common_types.hpp  main.cpp  manager_dispatcher.hpp  memory_storage.hpp  test_logger.hpp
test/future-state-fixes/: CMakeLists.txt  main.cpp
test/gcc-args-check/: CMakeLists.txt  main.cpp
test/generator/: CMakeLists.txt  main.cpp
test/implements/: CMakeLists.txt  main.cpp
test/intrusive_ptr/: CMakeLists.txt  classes.hpp
test/life-cycle/: CMakeLists.txt  classes.hpp  main.cpp
test/memory_resource/: CMakeLists.txt
test/message/: CMakeLists.txt  classes.hpp  main.cpp
test/message-id/: CMakeLists.txt  main.cpp
test/metaprogramming/: CMakeLists.txt
test/non_copy_obj/: CMakeLists.txt  main.cpp
test/polymorphic_allocator/: CMakeLists.txt  classes.hpp  test_memory_resource.hpp
test/queue/: CMakeLists.txt  lifo_inbox.cpp
test/race-condition/: CMakeLists.txt  TESTING.md  main.cpp  test_aba_problem.cpp  test_available_race.cpp  test_available_race_chaining.cpp  test_cas_awaiter.cpp  test_cross_thread.cpp  test_needs_scheduling_race.cpp  test_promise_class.cpp  test_refcount.cpp  test_self_destroy_coroutine.cpp  test_shared_state.cpp  test_shutdown.cpp  test_shutdown_aggressive.cpp  test_state_transitions.cpp  test_stress_intrusive_ptr.cpp
test/resume-info/: CMakeLists.txt  main.cpp
test/rtt/: CMakeLists.txt  classes.hpp  main.cpp
test/rtt-issues/: CMakeLists.txt  main.cpp
test/shutdown/: CMakeLists.txt  main.cpp
test/slot-refcount/: CMakeLists.txt  main.cpp
test/spawn/: CMakeLists.txt  main.cpp
test/task/: CMakeLists.txt  main.cpp
test/tooltestsuites/: scheduler_test.cpp  scheduler_test.hpp
test/type-validation/: CMakeLists.txt  main.cpp
test/unique_function/: CMakeLists.txt  main.cpp
