#available tests

add_subdirectory(tooltestsuites)

add_subdirectory(actor-id)
add_subdirectory(bool-prohibited)
add_subdirectory(continuation)
add_subdirectory(coroutines)
add_subdirectory(coroutine-threading)
add_subdirectory(dispatch-traits)
add_subdirectory(dispatcher-pattern)
add_subdirectory(intrusive_ptr)
add_subdirectory(life-cycle)
add_subdirectory(message)
add_subdirectory(message-id)
add_subdirectory(metaprogramming)
add_subdirectory(non_copy_obj)
add_subdirectory(queue)
add_subdirectory(race-condition)
add_subdirectory(spawn)
add_subdirectory(rtt)
add_subdirectory(resume-info)
add_subdirectory(type-validation)
add_subdirectory(shutdown)
add_subdirectory(slot-refcount)
add_subdirectory(coroutine-allocation)
add_subdirectory(future-state-fixes)
add_subdirectory(rtt-issues)
